--- a/index.html
+++ b/index.html
@@ -9,39 +9,39 @@
 <body>
     <form class="form">
         <h1 class="titulo">Formulario</h1>
-        <input type="text" name="nombre" placeholder="Nombre" required>
+        <input type="text" id="nombre" name="nombre" placeholder="Nombre" required>
         <p>Debe empezar por mayúscula</p>
-        <input type="text" name="apellidos" placeholder="Apellidos" required>
+        <input type="text" id="apellido" name="apellidos" placeholder="Apellidos" required>
         <p>Debe empezar por mayúscula</p>
         <div class="inline-inputs">
-            <input type="text" name="dni" placeholder="DNI/NIE" required>
+            <input type="text" id="dni" name="dni" placeholder="DNI/NIE" required>
             <p>Deben tener entre 1 y 8 dígitos y terminar en una letra</p>
-            <input type="text" name="fechaNacimiento" placeholder="Fecha nacimiento" required>
+            <input type="text" id="nacimiento" name="fechaNacimiento" placeholder="Fecha nacimiento" required>
             <p>Formato: DD/MM/YYYY</p>
         </div>
-        <input type="text" name="codigoPostal" placeholder="Código Postal" required>
+        <input type="text" id="cp" name="codigoPostal" placeholder="Código Postal" required>
         <p>Debe ser un número de 5 dígitos</p>
-        <input type="email" name="email" placeholder="Email" required>
+        <input type="email" id="email" name="email" placeholder="Email" required>
         <p>Debe ser un correo electrónico válido</p>
-        <input type="tel" name="telFijo" placeholder="Teléfono fijo" required pattern="^\d{9}$">
+        <input type="tel" id="fijo" name="telFijo" placeholder="Teléfono fijo" required>
         <p>Debe ser un número de 9 dígitos</p>
-        <input type="tel" name="telMovil" placeholder="Teléfono móvil" required pattern="^(\+34|34)?\d{9}$">
+        <input type="tel" id="movil" name="telMovil" placeholder="Teléfono móvil" required>
         <p>Debe ser un número de 9 dígitos y ser un número de teléfono español</p>
-        <input type="text" name="iban" placeholder="IBAN" required pattern="^[A-Z]{2}\d{2}[A-Z0-9]{4,24}$" maxlength="24">
+        <input type="text" id="iban" name="iban" placeholder="IBAN" requiredmaxlength="24">
         <p>Debe empezar por dos letras seguido de números y letras</p>
-        <input type="text" name="tarjetaCredito" placeholder="Tarjeta de crédito" required pattern="^(?:\d{4}[- ]?){3}\d{4}$">
+        <input type="text" id="tarjeta" name="tarjetaCredito" placeholder="Tarjeta de crédito" required>
         <p>Debe ser un número de 16 dígitos con espacios o guiones cada 4</p>
-        <input type="password" name="password" placeholder="Contraseña" required pattern="^(?=.*[a-zA-Z])(?=.*\d)(?=.*[\W_]).{12,}$">
+        <input type="password" id="passwd" name="password" placeholder="Contraseña" required>
         <p>Debe tener al menos 12 caracteres, una letra, un número y un caracter especial</p>
-        <input type="password" name="confirmarPassword" placeholder="Confirmar contraseña" required pattern="^(?=.*[a-zA-Z])(?=.*\d)(?=.*[\W_]).{12,}$">
+        <input type="password" id="confirmar" name="confirmarPassword" placeholder="Confirmar contraseña" required>
         <p>Debe ser igual a la contraseña anterior</p>
         
         <div class="botones">
-            <button class="boton1" type="button" id=""></button>
-            <button class="boton2" type="button" id=""></button>
-            <button class="boton3" type="button" id=""></button>
-            <button class="boton4" type="button" id=""></button>
-            <button class="boton5" type="button" id=""></button>
+            <button class="boton1" type="button" id="cargarJson">Cargar desde JSON</button>
+            <button class="boton2" type="button" id="pubPhp">Publicar en PHP</button>
+            <button class="boton3" type="button" id="cargarPhp">Cargar desde PHP</button>
+            <button class="boton4" type="button" id="pubBbdd">Publicar BBDD</button>
+            <button class="boton5" type="button" id="cargarBbdd">Cargar BBDD</button>
         </div>
     </form>
     <script src="code.js"></script>
