--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         <p>Debe ser igual a la contraseña anterior</p>
         
         <div class="botones">
-            <button class="boton1" type="button" id=""></button>
-            <button class="boton2" type="button" id=""></button>
-            <button class="boton3" type="button" id=""></button>
-            <button class="boton4" type="button" id=""></button>
-            <button class="boton5" type="button" id=""></button>
+            <button class="boton1" type="button" id="">Obtener desde JSON</button>
+            <button class="boton2" type="button" id="">Publicar en PHP</button>
+            <button class="boton3" type="button" id="">Obtener desde PHP</button>
+            <button class="boton4" type="button" id="">Publicar en BBDD</button>
+            <button class="boton5" type="button" id="">Obtener BBDD</button>
         </div>
     </form>
     <script src="code.js"></script>
